# RaptMate

./: .gitignore  CMakeLists.txt  README.md  ToDo.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: compile.yaml  static.yml
_site/: index.html  manifest-esp32.json  manifest-esp32C6.json  manifest-esp32c3.json  manifest-esp32s3.json  manifest.json
binaries/: asset-manifest.json  index.html
binaries/static/css/: main.743927a1.css
binaries/static/js/: 685.85af4ce1.chunk.js  main.1cc062bf.js
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
main/common/: core.hpp
main/drivers/: RaptPillBLE.hpp  WifiManager.hpp
main/src/: RaptMateServer.cpp  RaptPillBLE.cpp
main/web/: RaptMateServer.hpp
rapt-mate/: package-lock.json  package.json
rapt-mate/public/: manifest.json
rapt-mate/src/: App.css  App.js
rapt-mate/src/components/: Overview.js
